<resources>
    <string name="app_name">SEA</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="kakao_app_key">057cb23d7904da15ed3b768bf2f046ed</string>>

    <string name="menu_mainhome">SEA</string>
    <string name="menu_registerWork">작품등록</string>
    <string name="menu_listWork">작품리스트</string>
    <string name="menu_rentalstatus">대여현황</string>
    <string name="menu_chat">채팅</string>
    <string name="menu_notice">공지사항(FAQ)</string>


</resources>