<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_mainhome"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_mainhome" />
        <item
            android:id="@+id/nav_registerwork"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_registerWork" />
        <item
            android:id="@+id/nav_listwork"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_listWork" />
        <item
            android:id="@+id/nav_rentalstatus"
            android:icon="@drawable/ic_menu_rental"
            android:title="@string/menu_rentalstatus" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_menu_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_menu_notice"
            android:title="@string/menu_notice"
            />
    </group>
</menu>