<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_mainhome">

    <fragment
        android:id="@+id/nav_mainhome"
        android:name="com.bugkillers.sea.activity.main.navigator.mainhome.MainHomeFragment"
        android:label="@string/menu_mainhome"
        tools:layout="@layout/fragment_mainhome" />

    <fragment
        android:id="@+id/nav_registerwork"
        android:name="com.bugkillers.sea.activity.main.navigator.registerWork.RegisterWorkFragment"
        android:label="@string/menu_registerWork"
        tools:layout="@layout/fragment_registerwork" />

    <fragment
        android:id="@+id/nav_listwork"
        android:name="com.bugkillers.sea.activity.main.navigator.managementWork.list.ListWorkFragment"
        android:label="@string/menu_listWork"
        tools:layout="@layout/fragment_listwork" />

    <fragment
        android:id="@+id/nav_rentalstatus"
        android:name="com.bugkillers.sea.activity.main.navigator.rentalStatus.RentalStatusFragment"
        android:label="@string/menu_rentalstatus"
        tools:layout="@layout/fragment_rentalstatus" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.bugkillers.sea.activity.main.navigator.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_notice"
        android:name="com.bugkillers.sea.activity.main.navigator.notice.NoticeFragment"
        android:label="@string/menu_notice"
        tools:layout="@layout/fragment_notice" />

    <fragment
        android:id="@+id/nav_updatework"
        android:name="com.bugkillers.sea.activity.main.navigator.managementWork.update.UpdateWorkFragment"
        tools:layout="@layout/fragment_updatework" />

    <fragment
        android:id="@+id/nav_detail_artitem"
        android:name="com.bugkillers.sea.activity.main.navigator.managementWork.detail.DetailArtItemFragment"
        tools:layout="@layout/fragment_detail_artitem" />



</navigation>